# adaptive-ncl-hgd

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
experiments/exper1/classification/churn/: adapt_ncl_holdout_tune.yaml  bagging_holdout_tune.yaml  multi_adapt_ncl_holdout_tune.yaml  ncl_holdout_tune.yaml  single_holdout_tune.yaml
experiments/exper1/classification/waveform_21/: adapt_ncl_holdout_tune.yaml  bagging_holdout_tune.yaml  multi_adapt_ncl_holdout_tune.yaml  ncl_holdout_tune.yaml  single_holdout_tune.yaml
experiments/exper1/regression/529_pollen/: adapt_ncl_holdout_tune.yaml  bagging_holdout_tune.yaml  multi_adapt_ncl_holdout_tune.yaml  ncl_holdout_tune.yaml  single_holdout_tune.yaml
experiments/exper2/classification/churn/: adapt_ncl_sweep.yaml  multi_adapt_ncl_sweep.yaml
experiments/exper2/classification/waveform_21/: adapt_ncl_sweep.yaml  (+1 more)
experiments/misc/: adapt_ncl_hvp_damping_example.yaml
notebooks/: datasets.ipynb
runs/misc/adapt_ncl_hvp_damping_example/: sweep_summary.json
scripts/: run_exper.sh
src/: utils.py
src/configs/: __init__.py  config.py
src/data/: pmlb.py  utils.py
src/experiments/: cli.py  run_experiment.py
src/factories/: __init__.py  callback.py  data.py  diversity.py  loss.py  optim.py  reporting.py  training.py
src/metrics/: diversity.py  reporting.py
src/models/: __init__.py  mlp.py  utils.py
src/training/: callbacks.py  io.py  utils.py
src/training/trainers/: __init__.py  bagging.py  base.py  ncl.py  single.py  utils.py
src/training/tuning/: tune.py  utils.py
(+152 files in other folders)
